--- a/main.html
+++ b/main.html
@@ -9,15 +9,14 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<ol>
-		<li>A</li>
-		<li>B</li>
-		<li>C</li>
+		<li>ball</li>
+			<li>bat</li>
+			<li>Cock</li>
 	</ol>
 	<ul>
-		<li>X</li>
-		<li>Y</li>
-		<li>Z</li>
-		
+		<li>Mumbai</li>
+			<li>Maxico</li>
+			<li>US</li>
 	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
