--- a/main.html
+++ b/main.html
@@ -9,15 +9,33 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<ol>
-		<li>ball</li>
-			<li>bat</li>
-			<li>Cock</li>
+		<li data-ns-test="shooping List">
+			holiday trip for parents 
+		</li>
+			<li data-ns-test="shooping List">
+			cars 
+		</li>
+			<li data-ns-test="shooping List">
+	phone
+		</li>
 	</ol>
-	<ul>
-		<li>Mumbai</li>
-			<li>Maxico</li>
-			<li>US</li>
+	<ul >
+		<li data-ns-test="shooping List">
+			Goa
+		</li>
+		<li data-ns-test="shooping List">
+			Australia
+		</li>
+		<li data-ns-test="shooping List">
+			londan
+		</li>
 	</ul>
+		
+	
+	
+		
+		
+		
     <script type="text/javascript" src="./script.js">
 </script>
 
