--- a/main.html
+++ b/main.html
@@ -20,21 +20,14 @@
 		</li>
 	</ol>
 	<ul >
-		<li data-ns-test="shooping List">
-			Goa
-		</li>
-		<li data-ns-test="shooping List">
-			Australia
-		</li>
-		<li data-ns-test="shooping List">
-			londan
-		</li>
-	</ul>
+		<li data-ns-test="holidayList">Goa</li>
+			
 		
+		<li data-ns-test="holidayList">Australia	</li>
+			
 	
-	
-		
-		
+		<li data-ns-test="holidayList">londan</li>
+			</ul>		
 		
     <script type="text/javascript" src="./script.js">
 </script>
