--- a/main.html
+++ b/main.html
@@ -9,13 +9,13 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<ol>
-		<li data-ns-test="shooping List">
+		<li data-ns-test="shoppingList">
 			holiday trip for parents 
 		</li>
-			<li data-ns-test="shooping List">
+			<li data-ns-test="shoppingList">
 			cars 
 		</li>
-			<li data-ns-test="shooping List">
+			<li data-ns-test="shoppingList">
 	phone
 		</li>
 	</ol>
