--- a/main.html
+++ b/main.html
@@ -29,7 +29,8 @@
 		<li data-ns-test="holidayList">londan</li>
 			</ul>		
 		
-    <script type="text/javascript" src="./script.js">
+   <script type="text/javascript" src="./script.js"></script>
+
 </script>
 
 </body>
